--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #D1E8E4;
+  max-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.text {
+  width: 50%;
+}
+
+.btn {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #D1E8E4;
+}
+
+button {
+
+  background-color: #128529;
+  color: #fff;
+  padding: 15px;
+  border: none;
+  text-transform: uppercase;
+}
+
+@media all and (max-width: 700px) {
+  .text {
+    width: 90%;
   }
 }
